--- a/Integration/src/main/webapp/css/content_write.css
+++ b/Integration/src/main/webapp/css/content_write.css
@@ -77,8 +77,11 @@
 
 /* INPUT TYPE */
 
-.wlong{width:95%; height:30px; line-height:18px; background:#fff; border:1px #d9d9d9 solid; padding:0 5px; font-size:12px;}
-.searchtxt{width:72%; height:30px; line-height:18px; background:#fff; border:1px #d9d9d9 solid; padding:0 5px; font-size:12px;}
+/*수정*/
+.wlong{width:95%; height:30px; line-height:18px; background:#fff; border:none; padding:0 5px; font-size:12px;}
+
+/*수정*/
+.searchtxt{width:95%; height:30px; line-height:18px; background:#fff; border:none; padding:0 5px; font-size:12px;}
 	.ttxt{width: 98%;height: 50px; border: 1px solid white;}
 
 .fileType{width:95%; height:20px; line-height:20px; background:#fff;}
